--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,8 +8,27 @@
 
 	/* navbar-part */
 
+
+
 	.navbar-toggler {
 		background-color: var(--primary-color-nav);
+		font-size: 1;
+		line-height: 1;
+		color: var(--bs-navbar-color);
+		border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
+		border-radius: var(--bs-navbar-toggler-border-radius);
+		transition: var(--bs-navbar-toggler-transition);
+		padding: 0 5px;
+	}
+	.navbar-toggler-icon {
+		display: inline-block;
+		width: 22px;
+		height: 24px;
+		vertical-align: middle;
+		background-image: var(--bs-navbar-toggler-icon-bg);
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: 100%;
 	}
 	
 	.navbar-toggler:focus {
@@ -31,19 +50,69 @@
 	.navbar-brand img {
 		width: 95px;
 	}
+
+	.offcanvList{
+		margin-top: 10px;
+		
+	}
+
+	
+	.offcanvList li a{
+color: var(--primary-color);
+transition: all linear 0.4s;
+	}
+	.offcanvList li{
+		/* background: green; */
+		text-align: center;
+		padding: 10px;
+		margin: 10px;
+		border: 2px solid var(--primary-color);
+		transition: all linear 0.4s;
+	}
+	.offcanvList li:hover {
+		background: var(--primary-color);
+		
+	}
+	.offcanvList li:hover a{
+		color: #fff;
+	}
+	.offcav-heading{
+		color: var(--primary-color);
+		text-align: center;
+		padding-bottom: 23px;
+	}
+	.offcanv-button .offcanv-btn{
+		width: 100%;
+		padding: 10px 0;
+		border-radius: 10px;
+		background: var(--primary-color);
+		color: #fff;
+		border: 0px solid var(--primary-color);
+		color: #FFF;
+		font-family: var(--font-family);
+		font-size: 20px;
+		font-weight: 600;
+		transition: all linear 0.3s;
+		
+	}
+	
+	.offcanv-button .offcanv-btn:hover{
 	
 	
+		background: var(--button-hover);
+		
+	}
 	
 	/* banner-part */
 	.banner__mainHeading {
-		font-size: 28px;
+		font-size: 24px;
 		line-height: 105%;
 		width: auto;
 	}
 	
 	.banner {
 		background-size: auto;
-		padding: 125px 0 100px;
+		padding: 115px 0 65px;
 	}
 
 	.banner__main{
@@ -58,29 +127,29 @@
 	}
 	
 	.banner__btn {
-		padding: 8px 24px;
-		font-size: 13px;
-		margin-top: 26px;
+		padding: 5px 22px;
+		font-size: 12px;
+		margin-top: 20px;
 	}
 	
 	.banner__slider {
-		top: 245px;
+		top: 195px;
 	}
 
 	
 	.banner__dot {
-		height: 16px;
-		width: 16px;
+		height: 14px;
+		width: 14px;
 	}
 	
 	.banner__dotActive {
-		height: 10px;
-		width: 10px;
+		height: 8px;
+		width: 8px;
 	}
 	
 	.banner__dot::after {
-		width: 10px;
-		height: 10px;
+		width: 8px;
+		height: 8px;
 	}
 	
 	
@@ -155,7 +224,10 @@
 	}
 
 
-	
+	img, svg {
+		vertical-align: middle;
+		width: 50px;
+	}
 
 
 
@@ -445,8 +517,8 @@
 }
 	
 .footer__call {
-	width: 50%;
-	margin-top: 40px;
+    width: 50%;
+    margin-top: 40px;
 }
 	
 	
